--- a/app/globals.css
+++ b/app/globals.css
@@ -126,6 +126,7 @@
     /* font-family: Inter, sans-serif; */
     font-family: Montserrat, sans-serif;
     /* font-family: Nunito, sans-serif; */
+    overflow-x: hidden;
   }
 }
 
